Bug 212725 - When opening the KTimeTracker program within Kontact, it doesn't load an ICS file by default.
Summary: When opening the KTimeTracker program within Kontact, it doesn't load an ICS ...
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: ktimetracker (other bugs)
Version First Reported In: 4.3.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Thorsten Staerk
URL:
Keywords:
: 217866 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-11-02 13:08 UTC by Tom Inglis
Modified: 2009-12-08 20:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Inglis 2009-11-02 13:08:04 UTC
Version:           4.3.2 (using KDE 4.3.2)
OS:                Linux
Installed from:    Ubuntu Packages

When I open the KTimeTracker program within Kontact, it doesn't load an ICS file by default. It should at least load the standard one, but ideally the last one you were working with?
Comment 1 Nicolas L. 2009-12-08 17:38:35 UTC
*** Bug 217866 has been marked as a duplicate of this bug. ***
Comment 2 Nicolas L. 2009-12-08 17:42:54 UTC
in + when there is no ICS file loaded it "New task" doesn't work and should load one.
Comment 3 Nicolas L. 2009-12-08 19:05:47 UTC
i just done a patch, i will create a review in some minutes
Comment 4 Nicolas L. 2009-12-08 19:17:22 UTC
here is the review request : 

http://reviewboard.kde.org/r/2340
Comment 5 Nicolas L. 2009-12-08 20:56:29 UTC
SVN commit 1060399 by nlecureuil:

Allow "new task" button to work when KTimeTracker is embeded in Kontact
and no document already exists

BUG:212725


 M  +3 -0      timetrackerwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1060399