Allow "new task" button to work when KTimeTracker is embeded in Kontact and no document already exists

BUG:212725

svn path=/trunk/KDE/kdepim/ktimetracker/; revision=1060399